# rust_counter

./: .gitignore  Cargo.toml  Makefile  README.md  example.json  install.bat
src/: app.rs  counter.rs  debugging.rs  dialog.rs  entry.rs  input.rs  interface.rs  main.rs  ui.rs
src/settings/: events.rs  item.rs  mod.rs  ui.rs
src/tests/: app.rs  mod.rs
src/widgets/: dialog.rs  entry.rs  mod.rs
