[package]
name = "counter-tui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0"
tui = { git = "https://github.com/p3rtang/tui-rs" }
crossterm = "0.25"
progress = "0.2.0"
nix = "0.26.1"
bitflags = "1.3.2"
indexmap = "1.9.2"
